resize imageview + fixed menuitmes somewhat